<resources>
    <string name="app_name">AndroidKotlin_9-11am</string>
    <string name="my_textview">My TextView</string>
    <string name="abc">ABC</string>
    <string name="click">Click</string>
    <string name="channel_description">Description</string>
    <string name="default_notification_channel_id" translatable="false">CHANNEL_ID</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_text">Enter text</string>
    <string name="to_do_items">To do Items</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="activity">Activity</string>
    <string name="chats">Chats</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="change_app_color_mode">Change App Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="address_not_found">Address not found</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string-array name="gender">
        <item name="select">Select your gender</item>
        <item name="male">Male</item>
        <item name="female">Female</item>
        <item name="other">Other</item>
    </string-array>
    <array name="auto_size_text_sizes">
        <item>16sp</item>
        <item>20sp</item>
        <item>48sp</item>
        <item>100sp</item>
    </array>
</resources>