<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_graph.xml"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.o7services.androidkotlin_9_11am.bottomnavigation.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.o7services.androidkotlin_9_11am.bottomnavigation.ChatFragment"
        android:label="@string/chats"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.o7services.androidkotlin_9_11am.bottomnavigation.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/chatDetailsFragment"
        android:name="com.o7services.androidkotlin_9_11am.bottomnavigation.ChatDetailsFragment"
        android:label="fragment_chat_details"
        tools:layout="@layout/fragment_chat_details" />
</navigation>